[cdb] Fix flags overflow

--- a/bin/cdb.less
+++ b/bin/cdb.less
@@ -426,10 +426,6 @@
 			}
 		}
 
-		td.t_flags {
-			overflow: visible;
-		}
-
 		td.t_ref, td.t_enum {
 			overflow : visible;
 		}
